# internal/model/info.go
@@ -1,0 +1,6 @@
+package model
+
+type AuthInfo struct {
+	Access  string `json:"Refresh"`
+	Refresh string `json:"Access"`
+}
