# public/swagger.json
@@ -1,13 +1,103 @@
 {
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
+  "schemes": [
+    "http"
+  ],
   "swagger": "2.0",
-  "info": {},
+  "info": {
+    "title": "User Service API.",
+    "version": "1.0.0"
+  },
   "paths": {
+    "/auth/login": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "summary": "Авторизация пользователя.",
+        "operationId": "LoginRequest",
+        "parameters": [
+          {
+            "x-go-name": "Body",
+            "name": "usersAuth",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/UserAuth"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/LoginResponse"
+          },
+          "400": {
+            "$ref": "#/responses/StatusBadRequest"
+          }
+        }
+      }
+    },
+    "/auth/refresh": {
+      "post": {
+        "security": [
+          {
+            "Bearer": [
+              "[]"
+            ]
+          }
+        ],
+        "tags": [
+          "auth"
+        ],
+        "summary": "Обновление токена.",
+        "operationId": "RefreshRequest",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/RefreshResponse"
+          },
+          "400": {
+            "$ref": "#/responses/StatusBadRequest"
+          }
+        }
+      }
+    },
+    "/auth/register": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "summary": "Регистрация пользователя.",
+        "operationId": "RegisterRequest",
+        "parameters": [
+          {
+            "x-go-name": "Body",
+            "name": "users",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/UserWithoutBalance"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/RegisterResponse"
+          },
+          "400": {
+            "$ref": "#/responses/StatusBadRequest"
+          }
+        }
+      }
+    },
     "/users": {
       "get": {
         "tags": [
           "user"
         ],
-        "summary": "Get all users.",
+        "summary": "Получение ников всех пользователей.",
         "operationId": "EmptyRequest",
         "responses": {
           "200": {
@@ -18,11 +108,239 @@
           }
         }
       }
+    },
+    "/users/{username}": {
+      "get": {
+        "security": [
+          {
+            "Bearer": [
+              "[]"
+            ]
+          }
+        ],
+        "tags": [
+          "user"
+        ],
+        "summary": "Получение информации о пользователе.",
+        "operationId": "GetUserInfoRequest",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Username",
+            "name": "username",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/UserInfoResponse"
+          },
+          "400": {
+            "$ref": "#/responses/StatusBadRequest"
+          }
+        }
+      },
+      "put": {
+        "security": [
+          {
+            "Bearer": [
+              "[]"
+            ]
+          }
+        ],
+        "tags": [
+          "user"
+        ],
+        "summary": "Обновление информации о пользователе.",
+        "operationId": "UpdateuserRequest",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Username",
+            "name": "username",
+            "in": "path",
+            "required": true
+          },
+          {
+            "x-go-name": "Body",
+            "name": "user",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/UserForUpdate"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/updateuserResponse"
+          },
+          "400": {
+            "$ref": "#/responses/StatusBadRequest"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "AuthInfo": {
+      "type": "object",
+      "properties": {
+        "access": {
+          "type": "string",
+          "x-go-name": "Refresh"
+        },
+        "refresh": {
+          "type": "string",
+          "x-go-name": "Access"
+        }
+      },
+      "x-go-package": "userService/internal/model"
+    },
+    "UserAuth": {
+      "type": "object",
+      "properties": {
+        "password": {
+          "type": "string",
+          "x-go-name": "Password"
+        },
+        "username": {
+          "type": "string",
+          "x-go-name": "Username"
+        }
+      },
+      "x-go-package": "userService/internal/model"
+    },
+    "UserForUpdate": {
+      "type": "object",
+      "properties": {
+        "info": {
+          "$ref": "#/definitions/UserInfoForUpdate"
+        },
+        "password": {
+          "type": "string",
+          "x-go-name": "Password"
+        },
+        "username": {
+          "type": "string",
+          "x-go-name": "Username"
+        }
+      },
+      "x-go-package": "userService/internal/model"
+    },
+    "UserInfo": {
+      "type": "object",
+      "properties": {
+        "balance": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Balance"
+        },
+        "firstname": {
+          "type": "string",
+          "x-go-name": "Firstname"
+        },
+        "group": {
+          "type": "string",
+          "x-go-name": "Group"
+        },
+        "lastname": {
+          "type": "string",
+          "x-go-name": "Lastname"
+        },
+        "surname": {
+          "type": "string",
+          "x-go-name": "Surname"
+        }
+      },
+      "x-go-package": "userService/internal/model"
+    },
+    "UserInfoForUpdate": {
+      "type": "object",
+      "properties": {
+        "firstname": {
+          "type": "string",
+          "x-go-name": "Firstname"
+        },
+        "group": {
+          "type": "string",
+          "x-go-name": "Group"
+        },
+        "lastname": {
+          "type": "string",
+          "x-go-name": "Lastname"
+        },
+        "surname": {
+          "type": "string",
+          "x-go-name": "Surname"
+        }
+      },
+      "x-go-package": "userService/internal/model"
+    },
+    "UserInfoWithoutBalance": {
+      "type": "object",
+      "properties": {
+        "firstname": {
+          "type": "string",
+          "x-go-name": "Firstname"
+        },
+        "group": {
+          "type": "string",
+          "x-go-name": "Group"
+        },
+        "lastname": {
+          "type": "string",
+          "x-go-name": "Lastname"
+        },
+        "surname": {
+          "type": "string",
+          "x-go-name": "Surname"
+        }
+      },
+      "x-go-package": "userService/internal/model"
+    },
+    "UserWithoutBalance": {
+      "type": "object",
+      "properties": {
+        "info": {
+          "$ref": "#/definitions/UserInfoWithoutBalance"
+        },
+        "password": {
+          "type": "string",
+          "x-go-name": "Password"
+        },
+        "username": {
+          "type": "string",
+          "x-go-name": "Username"
+        }
+      },
+      "x-go-package": "userService/internal/model"
     }
   },
   "responses": {
-    "ErrorReply": {
-      "description": "ErrorReply replys an error of API calling."
+    "LoginResponse": {
+      "description": "",
+      "schema": {
+        "$ref": "#/definitions/AuthInfo"
+      }
+    },
+    "RefreshResponse": {
+      "description": "",
+      "schema": {
+        "$ref": "#/definitions/AuthInfo"
+      }
+    },
+    "RegisterResponse": {
+      "description": ""
+    },
+    "StatusBadRequest": {
+      "description": "Bad Request replys an error of API calling."
+    },
+    "UserInfoResponse": {
+      "description": "",
+      "schema": {
+        "$ref": "#/definitions/UserInfo"
+      }
     },
     "UsersGetAllResponse": {
       "description": "",
@@ -32,6 +350,19 @@
           "type": "string"
         }
       }
+    },
+    "updateuserResponse": {
+      "description": "",
+      "schema": {
+        "$ref": "#/definitions/UserInfo"
+      }
+    }
+  },
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
     }
   }
 }
